--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <h1> Arthur Pelegrino Pinto </h1>
-    <h3> "Welcome to my Portfolio! Here is where I will share all my professional experience with you. 
-        If you want to learn more about me personally, there's a little space for that too—just click <a href="https://www.google.com">here!</a> Thanks for visiting."
-    </h3>
-
-    <!-- Skill list -->
-    <!-- Languages -->
 </head>
 <body>
+    <style>
+        body {
+            background-color: black;
+        }
+
+        .titles-subtitles {
+            color:aliceblue;
+        }
+    </style>
+    <h1 class="titles-subtitles"> Arthur Pelegrino Pinto </h1>
+    <h3 class="titles-subtitles"> "Welcome to my Portfolio! Here is where I will share all my professional experience with you. 
+        If you want to learn more about me personally, there's a little space for that too—just click <a href="https://www.google.com">here!</a> Thanks for visiting."
+    </h3>
+    
+    <!-- Skill list -->
+    <!-- Languages -->
     
 </body>
 </html>
